Finalizado página de apresentação

--- a/2-html-css-classes-posicionamento-flexbox/index.html
+++ b/2-html-css-classes-posicionamento-flexbox/index.html
@@ -9,13 +9,17 @@
     </head>
     <body>
         <header></header>
-        <main>
-            <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-            <p>Olá! Sou Gentil Silva, desenvolvedor FullStack com especialidade em Java, Spring boot, JavaScript, React, HTML e CSS. 
-                Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
-            </p>
-            <a href="https://www.linkedin.com/in/gentils-neto/">Linkedin</a>
-            <a href="https://github.com/gentilsilva">GitHub</a>
+        <main class="container">
+            <section class="container__conteudo">
+                <h1 class="container__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+                <p class="container__conteudo__texto">Olá! Sou Gentil Silva, desenvolvedor FullStack com especialidade em Java, Spring boot, JavaScript, React, HTML e CSS. 
+                    Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+                </p>
+                <div class="container__conteudo__links">
+                    <a class="container__conteudo__links__link" href="https://www.linkedin.com/in/gentils-neto/">Linkedin</a>
+                    <a class="container__conteudo__links__link" href="https://github.com/gentilsilva">GitHub</a>
+                </div>
+            </section>
             <img src="./imagens/perfil.jpeg" alt="Imagem de Perfil Gentil Silva">
         </main>
         <footer></footer>
